[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/img/portrait_background.png" type="Texture" id=1]
[ext_resource path="res://assets/img/portrait_shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/img/portrait_frame.png" type="Texture" id=3]
[ext_resource path="res://src/actors/Portrait.gd" type="Script" id=4]
[ext_resource path="res://assets/img/heart_frame.png" type="Texture" id=5]
[ext_resource path="res://assets/img/heart_fill.png" type="Texture" id=6]
[ext_resource path="res://assets/img/bell_fill.png" type="Texture" id=7]
[ext_resource path="res://assets/img/bell_frame.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Portrait" type="RigidBody2D"]
input_pickable = true
mass = 1000.0
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Person" type="Sprite" parent="."]

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
texture = ExtResource( 2 )

[node name="HeartFrame" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="BellFrame" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="HeartFill" type="Sprite" parent="."]
visible = false
position = Vector2( 14, 27 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 11, 13, 0 )

[node name="BellFill" type="Sprite" parent="."]
visible = false
position = Vector2( -27, 16 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 11, 11, 0 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="input_event" from="." to="." method="_on_Portrait_input_event"]
